--- a/mobile/css/mobile.main.css
+++ b/mobile/css/mobile.main.css
@@ -73,6 +73,20 @@
     text-decoration: none;
   }
 
+  .badge {
+    padding: 2px 7px;
+    height: 18px;
+    line-height: 16px;
+  }
+  #span_nbMessage {
+    position: absolute;
+    top: 10px;
+    right: 60px;
+    font-weight: 400;
+    z-index: 100 !important;
+    border-radius: var(--border-radius);
+  }
+
   .nd2-card{
     background-color: rgba(var(--bg-color), var(--opacity))  !important;
   }
