--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -2750,6 +2750,9 @@ Desktop
   body[data-theme*="Dark"] select:not(.expressionAttr) {
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(172, 172, 172)'><polygon points='0,0 100,0 50,50'/></svg>") !important;
   }
+  body[data-theme] select[multiple] {
+    background-image: unset !important;
+  }
 
   select::-ms-expand {
     display: none;
