synth top round consistency

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -1203,6 +1203,7 @@ Desktop
   .objectPreview .resume .objectSummaryParent:first-child {
     border-radius: var(--border-radius) 0 0 0 !important;
   }
+  .objectPreview .topPreview .objectSummaryParent.last,
   .objectPreview .resume .objectSummaryParent:last-child {
     border-bottom-right-radius: var(--border-radius) !important;
   }
