--- a/core/template/scenario/gotodesign.default.html
+++ b/core/template/scenario/gotodesign.default.html
@@ -5,7 +5,7 @@
 <script>
   jeedom.plan.allHeader({
     error: function (error) {
-      $('#div_alert').showAlert({message: error.message, level: 'danger'});
+      $.fn.showAlert({message: error.message, level: 'danger'});
     },
     success: function (plans) {
       var options = '';
