--- a/core/template/scenario/report.default.html
+++ b/core/template/scenario/report.default.html
@@ -48,7 +48,7 @@
 <script>
   jeedom.view.all({
     error: function (error) {
-      $('#div_alert').showAlert({message: error.message, level: 'danger'})
+      $.fn.showAlert({message: error.message, level: 'danger'})
     },
     success: function (views) {
       var options = ''
@@ -65,7 +65,7 @@
 
   jeedom.plan.allHeader({
     error: function (error) {
-      $('#div_alert').showAlert({message: error.message, level: 'danger'})
+      $.fn.showAlert({message: error.message, level: 'danger'})
     },
     success: function (plans) {
       var options = ''
@@ -82,7 +82,7 @@
 
   jeedom.plugin.all({
     error: function (error) {
-      $('#div_alert').showAlert({message: error.message, level: 'danger'})
+      $.fn.showAlert({message: error.message, level: 'danger'})
     },
     success: function (plugins) {
       var options = '';
@@ -102,7 +102,7 @@
 
   jeedom.timeline.listFolder({
     error: function (error) {
-      $('#div_alert').showAlert({message: error.message, level: 'danger'})
+      $.fn.showAlert({message: error.message, level: 'danger'})
     },
     success: function (timelines) {
       var options = ''
