--- a/mobile/css/mobile.main.css
+++ b/mobile/css/mobile.main.css
@@ -1343,6 +1343,9 @@
   #div_graph .highcharts-button-disabled {
     opacity: 0.3;
   }
+  .eqLogic-widget .highcharts-background {
+    fill: transparent !important;
+  }
 
   .highcharts-axis-labels > text {
     fill: var(--link-color) !important;
