--- a/mobile/css/mobile.main.css
+++ b/mobile/css/mobile.main.css
@@ -1518,10 +1518,9 @@
     }
     #table_message td.msgBin {
       display: table-cell;
+      width: 20px;
     }
-    #table_message td:not(.datetime) {
-      margin-left: -40px;
-    }
+
     #table_message td.plugin:before {
       content: 'Source: ';
     }
@@ -1533,17 +1532,19 @@
       content: "\f2b6   ";
       font-family: "Font Awesome 5 Free";
       font-weight: 700;
-      font-size: 14px;
-      margin-left: -42px;
-      margin-right: 20px;
+      font-size: 16px;
+      margin-left: -35px;
+      margin-right: 15px;
+      opacity: 0.7;
     }
     #table_message td.occurrences:before {
       content: "\f01e   ";
       font-family: "Font Awesome 5 Free";
       font-weight: 700;
-      font-size: 14px;
-      margin-left: -42px;
-      margin-right: 20px;
+      font-size: 16px;
+      margin-left: -35px;
+      margin-right: 15px;
+      opacity: 0.7;
     }
   }
 
