Editor widget mode

--- a/desktop/css/editor.css
+++ b/desktop/css/editor.css
@@ -2,32 +2,47 @@
 Theme ElFinder File Editor 2021 @Jeedom
 */
 
-[data-page="editor"] #div_mainContainer {
-  overflow: hidden;
-}
-[data-page="editor"] #div_pageContainer {
-  margin-left: -15px;
-  margin-right: -15px;  
-}
+/* GLOBAL */
+  [data-page="editor"] #div_mainContainer {
+    overflow: hidden;
+  }
+  [data-page="editor"] #div_pageContainer {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
 
-#elfinder > .ui-icon-gripsmall-diagonal-se {
-  display: none !important;
-}
-#elfinder .elfinder-preference-tabs {
-  padding: 10px 24px !important;
-}
+  #elfinder > .ui-icon-gripsmall-diagonal-se {
+    display: none !important;
+  }
+  #elfinder .elfinder-preference-tabs {
+    padding: 10px 24px !important;
+  }
 
-#elfinder select {
-  background-image: initial !important;
-  background-color: var(--form-bg-color) !important;
-}
-#elfinder .ui-tabs-tab .ui-tabs-anchor,
-#elfinder .ui-tabs-active .ui-tabs-anchor,
-#elfinder .ui-tabs-anchor:hover {
-  border: none;
-  background-color: var(--form-bg-color) !important;
-}
+  #elfinder select {
+    background-image: initial !important;
+    background-color: var(--form-bg-color) !important;
+  }
+  #elfinder .ui-tabs-tab .ui-tabs-anchor,
+  #elfinder .ui-tabs-active .ui-tabs-anchor,
+  #elfinder .ui-tabs-anchor:hover {
+    border: none;
+    background-color: var(--form-bg-color) !important;
+  }
 
+/* ____________________Custom functions buttons */
+  #elfinder .elfinder-button-text {
+    background-color: rgb(221, 221, 221) !important;
+    cursor: pointer !important;
+    padding: 3px 8px !important;
+  }
+  #elfinder .elfinder-button-icon-createWidget {
+    display: none;
+  }
+  #elfinder .elfinder-button-icon-createWidget + .elfinder-button-text {
+    color: rgb(80, 80, 88) !important;
+    font-weight: 700;
+    display: unset !important;
+  }
 
 /* ____________________ELFINDER EDITOR */
   #elfinder .elfinder-toolbar::after {
@@ -66,6 +81,9 @@ Theme ElFinder File Editor 2021 @Jeedom
 
   #elfinder .elfinder-cwd-file {
     color: unset;
+  }
+  #elfinder .elfinder-cwd-view-list .elfinder-cwd-filename {
+    font-size: 15px !important;
   }
   #elfinder .elfinder .elfinder-navbar {
    font-size: 0.78em
@@ -188,6 +206,7 @@ Theme ElFinder File Editor 2021 @Jeedom
 
   #elfinder .elfinder-navbar-wrapper {
     line-height: 10px !important;
+    font-size: 15px;
   }
 
   #elfinder .ui-dialog-titlebar .elfinder-titlebar-button-right {
