--- a/desktop/css/editor.css
+++ b/desktop/css/editor.css
@@ -35,10 +35,10 @@ Theme ElFinder File Editor 2021 @Jeedom
     cursor: pointer !important;
     padding: 3px 8px !important;
   }
-  #elfinder .elfinder-button-icon-createWidget {
+  #elfinder span[class*='elfinder-button-icon-jee_'] {
     display: none;
   }
-  #elfinder .elfinder-button-icon-createWidget + .elfinder-button-text {
+  #elfinder span[class*='elfinder-button-icon-jee_'] + .elfinder-button-text {
     color: rgb(80, 80, 88) !important;
     font-weight: 700;
     display: unset !important;
