Massive UI oO - Aligments (dashboard etc) - No more jeedomUtils.initRowOverflow() - #dashTopBar.editing css - floatingbar normalisation - Fixed history <992 - Fixed log <992

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -146,6 +146,15 @@ Desktop
 
   #dashTopBar {
     margin-top: 5px;
+    width: calc(100% + 2px) !important;
+    left: -1px;
+  }
+  #dashTopBar.editing {
+    position: fixed;
+    top: 50px;
+    z-index: 500;
+    width: calc(100% - 17px) !important;
+    left: 6px;
   }
   #in_searchDashboard.editing {
     background-color: var(--al-info-color) !important;
@@ -177,6 +186,15 @@ Desktop
     overflow-x: hidden;
     scrollbar-width: thin;
     height: 100% !important;
+    padding-right: 7px;
+    padding-left: 7px;
+  }
+
+  #div_pageContainer div.tab-content {
+    height: calc(100vh - 110px) !important;
+  }
+  #div_pageContainer div.tab-content div.tab-content {
+    height: unset !important;
   }
 
   #categoryfilter i {
@@ -904,26 +922,32 @@ Desktop
   }
 
   #div_displayLogList {
-    padding-top: 37px !important;
-    padding-left: 0 !important;
+    overflow: hidden auto;
     padding-right: 0 !important;
     font-size: 13px;
     max-height: calc(100vh - 60px);
   }
-  .li_log i{
+  #div_displayLogList ul > li > a {
+    padding: 2px !important;
+  }
+  #div_displayLogList .li_log i {
     position: relative;
     left: -2px;
     top :1px;
   }
-
-  .li_log i.fa-check {
+  #div_displayLogList .li_log i.fa-check {
     color: var(--logo-primary-color);
   }
-  .li_log i.fa-exclamation-triangle {
+  #div_displayLogList .li_log i.fa-exclamation-triangle {
     color: var(--al-danger-color);
   }
-  .li_log i.fa-exclamation-circle {
+  #div_displayLogList .li_log i.fa-exclamation-circle {
     color: var(--al-warning-color);
+  }
+  #div_displayLogList .nav > li.li_log.active a {
+    width: 100% !important;
+    border: 2px solid transparent;
+    border-right-color: var(--logo-primary-color) !important;
   }
 
   .list-group-item {
@@ -1027,6 +1051,9 @@ Desktop
     padding: 4px 8px;
     margin: 35px 10px 0 15px;
     z-index: 20;
+  }
+  #dashOverviewPrevSummaries .objectSummaryContainer:empty {
+    display: none !important;
   }
 
   /* action summary */
@@ -1174,7 +1201,7 @@ Desktop
     position: relative;
     display: table-cell;
     left: -5px;
-    top: -5px;
+    top: -6px;
   }
   .objectPreview .topPreview .objectSummaryParent[data-summary^="temp"] {
     top: 10px;
@@ -1237,8 +1264,10 @@ Desktop
 
   /* ______Overview preview on dashboard */
   [data-page="dashboard"] #dashOverviewPrev {
+    position: relative;
+    left: -1px;
     padding: 5px;
-    width: calc(100% - 3px);
+    width: calc(100% + 2px);
     overflow: hidden;
     border-radius: var(--border-radius) !important;
     background: rgba(var(--bg-color), var(--opacity));
@@ -1303,6 +1332,10 @@ Desktop
   }
   [data-type="plugin"] .eqLogicThumbnailDisplay {
     overflow: unset !important;
+  }
+  [data-type="plugin"] .col-xs-12 > .input-group {
+    margin-left: unset !important;
+    margin-right: unset !important;
   }
   select.selectCmd {
     border: 0;
@@ -1667,6 +1700,7 @@ Desktop
   }
   #battery,
   #alertEqlogic {
+    padding-top: 10px;
     margin-bottom: 20px !important;
   }
   #battery .eqLogic-widget {
@@ -2875,6 +2909,11 @@ Desktop
   }
 
 /* ____________________TABS */
+  #div_pageContainer > .row.row-overflow > div:not(#div_displayObjectList) {
+    padding-top: 5px;
+    padding-right: 7px;
+  }
+
   #div_pageContainer > .row.row-overflow > .col-xs-12 {
     margin-bottom: 0;
   }
@@ -2910,19 +2949,23 @@ Desktop
   .floatingbar {
     position: absolute;
     top: 55px;
-    right: 10px;
+    right: 15px;
+    z-index: 100;
   }
   .row-overflow .floatingbar {
     top: 15px;
-    right: 15px;
   }
   .tab-pane .floatingbar {
     top: 10px;
     right: 15px;
   }
-  body[data-page="administration"] .tab-content,
-  body[data-page="update"] .tab-content {
+  body[data-page="administration"] #div_pageContainer div.tab-content,
+  body[data-page="update"] #div_pageContainer div.tab-content {
     height: calc(100vh - 145px) !important;
+
+    max-height: max-content;
+
+
   }
   body[data-page="update"] div.progressbarContainer:not(.hidden) + .nav-tabs + .tab-content {
     height: calc(100vh - 200px) !important;
@@ -3947,6 +3990,9 @@ Desktop
   }
 
 /* ____________________HIGHCHARTS */
+  #div_graph {
+    height: calc(100vh - 55px);
+  }
   .highcharts-legend-item tspan {
     cursor: pointer;
   }
@@ -4767,6 +4813,12 @@ Desktop
     font-size: 13px;
     line-height: 14px;
   }
+  #pre_globallog {
+    overflow: auto !important;
+    height: calc(100vh - 115px) !important;
+    width: 100%;
+    margin-top: 5px;
+  }
   #pre_globallog span,
   #pre_eventlog span {
     height: 12px;
@@ -4804,6 +4856,8 @@ Desktop
   }
   .input-group .roundedRight {
     border-radius: 0 var(--border-radius) var(--border-radius) 0 !important;
+  }
+  :not(.in_search-*) .input-group .roundedRight {
     margin-right: 3px !important;
   }
   .roundedLeft::-moz-color-swatch {
@@ -4929,8 +4983,11 @@ Desktop
 
   @media screen and (max-width: 768px) {
     #div_displayLogList {
-      padding-top: 0 !important;
-      max-height: 11.5em;
+      max-height: 250px;
+      margin-right: 15px
+    }
+    #pre_globallog {
+      height: calc(100vh - 350px) !important;
     }
     .navbar .container-fluid .navbar-collapse.collapse.in {
       box-shadow:  0 16px 16px 3px var(--shd-color);
@@ -4938,9 +4995,28 @@ Desktop
     .navbar-nav.navbar-right {
       display: none;
     }
+
+    [data-page="history"] #div_graph {
+      height: calc(100vh - 360px);
+    }
+    [data-page="history"] .bs-sidebar {
+      overflow: auto;
+      max-height: 300px !important;
+    }
   }
 
   @media screen and (max-width: 992px) {
+    #div_pageContainer div.hasfloatingbar div.tab-content {
+      height: calc(100vh - 135px) !important;
+    }
+    div:not(.ui-dialog) > .floatingbar {
+      position: relative;
+      display: grid;
+      top: 0px !important;
+      right: 0;
+      text-align: right;
+    }
+
     #summaryGlobalMain {
       right: 115px;
       max-width: calc(100vw - 490px);
@@ -4957,9 +5033,6 @@ Desktop
 
     #div_editScenario .tab-content {
       max-height: calc(100% - 80px);
-    }
-    #div_editScenario ul.nav.nav-tabs {
-      margin-top: 30px !important;
     }
   }
 
