History revamp - Multi axis, scales, zooms - Better extremes management (all in highcharts events) - New yAxis toggle

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -4053,7 +4053,7 @@ Desktop
   .highcharts-button-box {
     stroke: transparent;
   }
-  .highcharts-axis-labels > text {
+  .highcharts-axis-labels.highcharts-xaxis-labels > text {
     fill: var(--link-color) !important;
   }
   .highcharts-yaxis-grid .highcharts-grid-line {
