--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -4034,7 +4034,7 @@ Desktop
   div.chartContainer .highcharts-scrollbar-track {
     stroke: transparent;
   }
-  div.chartContainer .highcharts-point {
+  div.chartContainer .highcharts-legend-item > .highcharts-point {
     x: -2px;
     y: 9px;
     height: 5px;
