--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -4040,11 +4040,6 @@ Desktop
     height: 5px;
     width: 18px;
   }
-  div.chartContainer .highcharts-button.highcharts-button-pressed > rect {
-    stroke-width: 1;
-    stroke: var(--placeholder-color);
-  }
-
   .highcharts-minor-tick { stroke: var(--placeholder-color)}
   .highcharts-tick { stroke: var(--txt-color)}
   :not(.gauge) >.highcharts-container .highcharts-axis-line { stroke: var(--txt-color) }
@@ -4084,12 +4079,6 @@ Desktop
   .highcharts-button-box > text {
     fill: var(--link-color) !important;
   }
-  div.chartContainer .highcharts-button-box {
-    x:0;
-    y:0;
-    rx: var(--border-radius);
-    ry: var(--border-radius);
-  }
   .highcharts-axis-labels.highcharts-xaxis-labels > text {
     fill: var(--link-color) !important;
   }
@@ -4103,6 +4092,21 @@ Desktop
   }
   div.chartContainer .highcharts-button-disabled {
     opacity: 0.3;
+  }
+  div.chartContainer .highcharts-button-box {
+    x:0;
+    y:0;
+    rx: var(--border-radius);
+    ry: var(--border-radius);
+    stroke: transparent;
+  }
+  div.chartContainer .highcharts-button.highcharts-button-pressed > rect {
+    stroke: transparent;
+    fill: var(--objectBkgd-color) !important;
+  }
+  div.chartContainer .highcharts-button.highcharts-button-pressed > text {
+    stroke: transparent;
+    fill: var(--objectTxt-color) !important;
   }
   path.highcharts-graph {
     stroke-width: 1.2;
